--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +11,7 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
+    "@types/react-redux": "^7.1.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
@@ -17,6 +19,7 @@
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-typescript": "^1.2.1",
     "serve": "^14.2.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
